# Abschlussprojekt2025

./: .gitignore  .pdm-python  README.md  Startseite.py  kalender.py  main.py  pyproject.toml  style.css  tree.py  use_case_diagramm.drawio
data/: Moritz.json  Nico.json  entries.json  standard.json  userlist.txt  variables.json
pages/: 0_🏠_Startseite.py  1_Kalender.py  1_📆Kalender.py  2_Highlights.py  2_🏆Highlights.py  3_Variable_hinzufügen.py  3_Wert_hinzufuegen.py  3_Wert_hinzufügen.py  3_✍️_Wert_hinzufuegen.py  4_Variable_hinzufuegen.py  4_Variable_hinzufügen.py  4_➕Variable_hinzufuegen.py  5_📈_Diagramme.py  6__RawData.py  variable_hinzufuegen.py
utility/: css_snippets.py
utils/: authenticator.py  calendar_events.py  cryptograph.py  cryptography_funcs.py  css_snippets.py  fitfiles.py  json_storage.py  variable.py
variable/: variable.py
