[project]
name = "Abschlussprojekt2025"
version = "0.1.0"
description = "Ein Gesundheits Tracking Dashboard"
authors = [
    {name = "mmamci", email = "mm3505@mci4me.at"},
]

dependencies = [
    "streamlit>=1.45.1",
    "streamlit-calendar>=1.3.1",
    "fitparse>=1.2.0",
    "plotly>=6.1.2",
    "cryptography>=45.0.4",
    "calplot>=0.1.7.5",
]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
